syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.payment;

message ProtoPayment {
    int32 desk = 1;
	int32 added_quantity = 2;
}

message DeleteRequest {
	string payment_id = 1;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoPayment payments = 1;
}

message CreateRequest {
	ProtoPayment payment = 1;
}

message CreateResponse {
    string id = 1;
}

service PaymentService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}